[package]
name = "smsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking" ,"rustls-tls"], default-features = false }
